# deaddrop

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Procfile  README.md  app.json  pyproject.toml  requirements.txt
.agent-scratchpad/: alice_agent.py  bob_agent.py  debate_config.sh  inbox.sh  send.sh
.github/workflows/: pr-checks.yml  release.yml
docs/: DESIGN_CRYPTO.md  DOKKU_DEPLOYMENT.md  GETTING_STARTED.md  LOCAL_NAMESPACES.md  ROOMS.md  SUBSCRIPTIONS.md  TESTING.md  THREADS.md  index.md
scripts/: check_requirements.py  test_e2e_local.py
src/deadrop/: __init__.py  _version.py  api.py  auth.py  auth_provider.py  backends.py  cache.py  cli.py  client.py  config.py  (+11 more)
test-env/: test_attachment_e2e.py  test_images.py
tests/: conftest.py  test_api.py  test_attachments.py  test_auth_provider.py  test_backend_errors.py  test_backends.py  test_cache_warming.py  test_client.py  test_config.py  test_contextvar_propagation.py  test_crypto.py  test_db_diagnostics.py  test_dedup.py  test_discovery.py  test_e2e_room_encryption.py  test_events.py  test_events_multi_stream.py  test_heare_auth.py  test_hrana_retry.py  test_instrument.py  test_instrumented_connection.py  test_jobs.py  test_migration_v5_to_v6.py  test_migrations.py  test_options.py  test_reverse_scroll_playwright.py  test_room_epochs.py  test_rooms.py  test_rooms_api.py  test_rooms_backend.py  test_rooms_encryption_api.py  test_slow_request_diagnostics.py  test_subscribe_api.py  test_subscribe_client.py  test_subscribe_cold_start.py  test_testing_fixtures.py  test_true_e2e_flow.py  test_turso_dns_monitor.py  test_uuid7_validation.py  test_visibility_refresh_playwright.py
(+23 files in other folders)
