[project]
name = "deadrop"
version = "0.1.0"
description = "Minimal inbox-only messaging for agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "cyclopts>=3",
    "httpx>=0.27",
    "uuid7>=0.1.0",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
turso = ["libsql-experimental>=0.0.47"]

[project.scripts]
deadrop = "deadrop.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deadrop"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
